// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionTitleComponent matches snapshot 1`] = `
<div
  className="position-details-header-container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Test Position
    </title>
    <meta
      content="Test Position 00003027"
      property="og:title"
    />
    <meta
      content="a description"
      property="og:description"
    />
    <meta
      content="http://localhost/"
      property="og:url"
    />
  </HelmetWrapper>
  <div
    className="position-details-header"
  >
    <div
      className="usa-grid-full positions-details-header-grid padded-main-content"
    >
      <div
        className="usa-width-two-thirds"
      >
        <div
          className="usa-grid-full"
        >
          <div
            className="usa-width-one-half header-title-container"
          >
            <div
              className="position-details-header-title"
            >
              <h1>
                Test Position
              </h1>
            </div>
            <div
              className="post-title"
            >
              Location: 
              Freetown, Sierra Leone
            </div>
          </div>
          <div
            className="usa-width-one-half title-actions-section"
          >
            <Connect(FavoriteContainer)
              isPV={false}
              useButtonClass={true}
              useLongText={true}
              useSpinnerWhite={true}
            />
          </div>
        </div>
      </div>
    </div>
    <img
      alt="United States flag background"
      className="position-details-header-image"
      src="/assets/img/us-flag.jpg"
    />
  </div>
  <div
    className="offset-bid-button-container"
  >
    <Flag
      name="flags.bidding"
      render={[Function]}
    />
    <Flag
      name="flags.bidding"
      render={[Function]}
    />
  </div>
</div>
`;

exports[`PositionTitleComponent matches snapshot when context.client === true 1`] = `
<div
  className="position-details-header-container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Test Position
    </title>
    <meta
      content="Test Position 00003027"
      property="og:title"
    />
    <meta
      content="a description"
      property="og:description"
    />
    <meta
      content="http://localhost/"
      property="og:url"
    />
  </HelmetWrapper>
  <div
    className="position-details-header"
  >
    <div
      className="usa-grid-full positions-details-header-grid padded-main-content"
    >
      <div
        className="usa-width-two-thirds"
      >
        <div
          className="usa-grid-full"
        >
          <div
            className="usa-width-one-half header-title-container"
          >
            <div
              className="position-details-header-title"
            >
              <h1>
                Test Position
              </h1>
            </div>
            <div
              className="post-title"
            >
              Location: 
              Freetown, Sierra Leone
            </div>
          </div>
          <div
            className="usa-width-one-half title-actions-section"
          />
        </div>
      </div>
    </div>
    <img
      alt="United States flag background"
      className="position-details-header-image"
      src="/assets/img/us-flag.jpg"
    />
  </div>
  <div
    className="offset-bid-button-container"
  >
    <Flag
      name="flags.bidding"
      render={[Function]}
    />
    <Flag
      name="flags.bidding"
      render={[Function]}
    />
  </div>
</div>
`;
